[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "richtqdm"
version = "0.1.3"
description = "A tqdm-style progress bar using Rich"
readme = "README.md"
authors = [{ name = "Mahbodez", email = "mahbodissaiy@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["rich>=12.0.0,<14.0.0"]
urls = { "Repository" = "https://github.com/mahbodez/richtqdm", "Author Profile" = "https://github.com/mahbodez" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["progress", "bar", "rich", "tqdm", "progress bar"]

[tool.setuptools.packages.find]
where = ["."]
include = ["richtqdm"]
